update dynamic part